fix: make close modal button more appropriate on mobile

--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -176,8 +176,14 @@
   width: 100%;
   height: 100%;
   display: flex;
-  align-items: center;
+  align-items: flex-end;
+  padding-bottom: 5%;
   justify-content: center;
+
+  @media (min-width: $breakpoint-mobile) {
+    align-items: center;
+    padding-bottom: 0;
+  }
   img {
     z-index: 2;
     pointer-events: none;
